2015-09-09  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/xy/XYShapeRenderer.java
    (drawItem): Update crosshair state.

2015-09-06  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/data/time/TimeSeries.java
    (findValueRange): Check for Double.NaN.

2014-08-31  David Gilbert  <david.gilbert@object-refinery.com>

    (Bug 986 fix from Vladimir Shirokov):
    * org/jfree/chart/plot/CombinedDomainXYPlot.java
    (datasetChanged): New method override.

2014-08-29  David Gilbert  <david.gilbert@object-refinery.com>

    (Patch from Simon Legner attached to bug 1129)
    * org/jfree/chart/ChartPanel.java
    (actionPerformed): Localise error messages,
    (saveAsSVG): Likewise,
    (saveAsPDF): Likewise.

2014-08-24  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/BarRenderer3D.java
    (drawItem): Add element hinting,
    * org/jfree/chart/renderer/IntervalBarRenderer.java
    (drawInterval): Add element hinting,
    * org/jfree/chart/renderer/LayeredBarRenderer.java
    (drawHorizontalItem): Add element hinting,
    (drawVerticalItem): Likewise,
    * org/jfree/chart/renderer/LevelRenderer.java
    (drawItem): Add element hinting.

2014-08-24  David Gilbert  <david.gilbert@object-refinery.com>

    * org/jfree/chart/renderer/AbstractRenderer.java
    (beginElementGroup): New method,
    (endElementGroup): Likewise,
    * org/jfree/chart/renderer/category/AbstractCategoryItemRenderer.java
    (beginElementGroup): Call superclass,
    (endElementGroup): Moved to superclass,
    * org/jfree/chart/renderer/xy/AbstractXYItemRenderer.java
    (beginElementGroup): New method,
    * org/jfree/chart/renderer/xy/XYBarRenderer.java
    (drawItem): Add element hinting,
    * org/jfree/data/KeyedValuesItemKey.java: New file,
    * org/jfree/data/xy/XYItemKey.java: New file.

2014-08-22  David Gilbert  <david.gilbert@object-refinery.com>

    Change suggested by Ulrich Voigt: