@@ -2,7 +2,7 @@
  * JFreeChart : a free chart library for the Java(tm) platform
  * ===========================================================
  *
- * (C) Copyright 2000-2014, by Object Refinery Limited and Contributors.
+ * (C) Copyright 2000-2015, by Object Refinery Limited and Contributors.
  *
  * Project Info:  http://www.jfree.org/jfreechart/index.html
  *
@@ -27,7 +27,7 @@
  * ----------------------
  * YIntervalRenderer.java
  * ----------------------
- * (C) Copyright 2002-2014, by Object Refinery Limited.
+ * (C) Copyright 2002-2015, by Object Refinery Limited.
  *
  * Original Author:  David Gilbert (for Object Refinery Limited);
  * Contributor(s):   -;
@@ -81,7 +81,7 @@ import org.jfree.util.ShapeUtilities;
 /**
  * A renderer that draws a line connecting the start and end Y values for an
  * {@link XYPlot}.  The example shown here is generated by the
- * <code>YIntervalRendererDemo1.java</code> program included in the JFreeChart
+ * {@code YIntervalRendererDemo1.java} program included in the JFreeChart
  * demo collection:
  * <br><br>
  * <img src="../../../../../images/YIntervalRendererSample.png"
@@ -114,7 +114,7 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
      * Returns the generator for the item labels that appear near the lower
      * y-value.
      *
-     * @return The generator (possibly <code>null</code>).
+     * @return The generator (possibly {@code null}).
      *
      * @see #setAdditionalItemLabelGenerator(XYItemLabelGenerator)
      *
@@ -127,10 +127,10 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
     /**
      * Sets the generator for the item labels that appear near the lower
      * y-value and sends a {@link RendererChangeEvent} to all registered
-     * listeners.  If this is set to <code>null</code>, no item labels will be
+     * listeners.  If this is set to {@code null}, no item labels will be
      * drawn.
      *
-     * @param generator  the generator (<code>null</code> permitted).
+     * @param generator  the generator ({@code null} permitted).
      *
      * @see #getAdditionalItemLabelGenerator()
      *
@@ -146,10 +146,9 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
      * Returns the range of values the renderer requires to display all the
      * items from the specified dataset.
      *
-     * @param dataset  the dataset (<code>null</code> permitted).
+     * @param dataset  the dataset ({@code null} permitted).
      *
-     * @return The range (<code>null</code> if the dataset is <code>null</code>
-     *         or empty).
+     * @return The range ({@code null} if the dataset is {@code null} or empty).
      */
     @Override
     public Range findRangeBounds(XYDataset dataset) {
@@ -171,7 +170,7 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
      * @param series  the series index (zero-based).
      * @param item  the item index (zero-based).
      * @param crosshairState  crosshair information for the plot
-     *                        (<code>null</code> permitted).
+     *                        ({@code null} permitted).
      * @param pass  the pass index (ignored here).
      */
     @Override
@@ -179,6 +178,11 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
             Rectangle2D dataArea, PlotRenderingInfo info, XYPlot plot,
             ValueAxis domainAxis, ValueAxis rangeAxis, XYDataset dataset,
             int series, int item, CrosshairState crosshairState, int pass) {
+
+        // do nothing if item is not visible
+        if (!getItemVisible(series, item)) {
+            return;
+        }
 
         // setup for collecting optional entity info...
         EntityCollection entities = null;
@@ -283,7 +287,7 @@ public class YIntervalRenderer extends AbstractXYItemRenderer
     /**
      * Tests this renderer for equality with an arbitrary object.
      *
-     * @param obj  the object (<code>null</code> permitted).
+     * @param obj  the object ({@code null} permitted).
      *
      * @return A boolean.
      */
